--- a/src/Components/PlayList/Playlist.css
+++ b/src/Components/PlayList/Playlist.css
@@ -6,7 +6,7 @@
     width: 37%;
     max-height: 950px;
     padding: 2.27rem 1.16rem;
-    background-color: rgba(208, 17, 17, 0.7);
+    background-color: white;
     box-shadow: 0 4px 2px 2px #000000;
 }
 
@@ -18,26 +18,27 @@
     border-bottom: 1px solid #6f6f6f;
     font-family: 'Poppins', sans-serif;
     font-size: 1.55rem;
-    color: #fff;
+    color: black;
 }
 
 .Playlist-save {
     cursor: pointer;
-    width: 10rem;
+    width: 11rem;
     padding: .77rem 0;
     border-radius: 54px;
     border-width: 0px;
     margin-top: 1.27rem;
-    background-color: #6c41ec;
+    background-color: rgba(16, 157, 6, 0.787);
     text-align: center;
     font-size: .83rem;
     transition: background-color .25s;
-    color: #fff;
+    color: black;
     font-weight: 500;
 }
 
 .Playlist-save:hover {
-    background-color: rgba(108, 65, 233, .7);
+    margin-top: 1.35rem;
+    background-color: rgb(14, 199, 1);
 }
 
 ::-webkit-scrollbar {
