--- a/src/Components/Track/Track.css
+++ b/src/Components/Track/Track.css
@@ -1,7 +1,7 @@
 .Track {
     display: flex;
     align-items: center;
-    border-bottom: 1px solid rgba(256, 256, 256, 0.8);
+    border-bottom: 1px solid black;
   }
   
   .Track-action {
@@ -11,11 +11,13 @@
     transition: color .25s;
     border: 0px;
     background-color: rgba(0, 0, 0, 0);
-    color: #fff;
+    color: black;
   }
   
   .Track-action:hover {
-    color: rgba(265, 265, 265, .5);
+    padding: .7rem;
+    transition: padding .5s;
+    color: gray;
   }
   
   .Track-information {
@@ -32,7 +34,7 @@
   .Track-information p {
     font-size: .83rem;
     font-weight: 300;
-    color: rgba(256, 256, 256, 0.8);
+    color: black;
   }
 
   .Track-image{
