--- a/src/Components/SearchResults/SearchResults.css
+++ b/src/Components/SearchResults/SearchResults.css
@@ -3,7 +3,7 @@
     height: 950px;
     overflow-y: scroll;
     padding: .88rem;
-    background-color: rgba(10, 110, 3, 0.7);
+    background-color: white;
     box-shadow: 0 4px 2px 2px #000000;
   }
   
