--- a/src/Components/App/App.css
+++ b/src/Components/App/App.css
@@ -17,13 +17,16 @@ h1 {
   color: black;
 }
 
-.App {
-  height: 100%;
-  padding: 0 17% 10% 17%;
+.Background{
   background-image: url('./background_photo_desktop.jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+}
+
+.App {
+  height: 100%;
+  padding: 0 17% 10% 17%;
   font-family: 'Work Sans', sans-serif;
   font-weight: 500;
   color: black;
